--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
 	"require": {
 		"nette/utils": "2.*",
 		"nette/application": "2.*",
+		"nette/bootstrap": "2.*",
+		"nette/di": "2.*",
+		"nette/database": "2.*",
 		"tracy/tracy": "2.*"
 	},
 	"require-dev": {
