--- a/tests/FoowieTests/Cron/DI/config.neon
+++ b/tests/FoowieTests/Cron/DI/config.neon
@@ -3,3 +3,7 @@ services:
 	- FoowieTests\Mocks\EntityManagerInterfaceMock
 cron:
 	securityToken: null
+extensions:
+	console: Kdyby\Console\DI\ConsoleExtension
+application:
+	scanDirs: false
