--- a/composer.json
+++ b/composer.json
@@ -10,19 +10,19 @@
 	}
 	],
 	"require": {
-		"php": ">=5.4 <7.2",
-		"nette/utils": ">=2.0 <2.5",
-		"nette/application": "2.*",
-		"nette/bootstrap": "2.*",
-		"nette/di": "2.*",
-		"nette/database": "2.*",
-		"tracy/tracy": "2.*"
+		"php": ">=5.6",
+		"nette/utils": "^2.4",
+		"nette/application": "^2.4",
+		"nette/bootstrap": "^2.4",
+		"nette/di": "^2.4",
+		"nette/database": "^2.4",
+		"tracy/tracy": "^2.4"
 	},
 	"require-dev": {
-		"nette/tester": "~1.0",
+		"nette/tester": "~2.0",
 		"doctrine/orm": ">=2.4 <2.7.3",
 		"doctrine/dbal": "~2.5",
-		"kdyby/doctrine": "2.*|~3.0"
+		"kdyby/doctrine": "~3.2"
 	},
 	"suggest": {
 		"doctrine/orm": "ORM framework",
